--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
-sudo: required
-
 language: php
 
-services:
-  - docker
+matrix:
+  include:
+    - php: 7.1
+      env: COMPOSER_FLAGS='--prefer-lowest'
+    - php: 7.1
+  fast_finish: true
 
-before_install:
-  - docker build -t game .
-  - docker run -d -p 127.0.0.1:80:80 --name game game
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+before_script:
+  - composer update --no-interaction --prefer-dist $COMPOSER_FLAGS
 
 script:
-  - docker ps | grep -q game
   - composer tests
